Update network_initialized when connection_type changes

Elsewhere, when connection_type_ is updated,
network_change_notifier_initialized is set to true if the connection
type is not UNKNOWN.

Bug: 858888
Test: Tested that DCHECK is no longer failing.
Change-Id: Ifae977543e22a6eef07ea20f85a8ba92087845b2
Reviewed-on: https://chromium-review.googlesource.com/1119544
Reviewed-by: Tarun Bansal <tbansal@chromium.org>
Reviewed-by: Steven Holte <holte@chromium.org>
Commit-Queue: Stephen Lanham <slan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571677}
Former-commit-id: 339c012e89e3a2f86c3818afb199da24f754552c